<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background" >

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/my_profile"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#B45F04"
        android:textSize="20sp"
        android:textStyle="bold" />
    
    <!-- <ImageView android:id="@+id/imgPic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="5dp"
        android:src="@drawable/stub"
        android:layout_below="@+id/txtTitle"
        android:scaleType="fitXY"/> -->

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/tvContact"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" >

        <LinearLayout
            android:id="@+id/llReg1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dp"
                    android:text="@string/gender"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvGender"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:singleLine="true"
                    android:hint="@string/gender"
                    android:textColor="@android:color/black"
                    android:gravity="center_vertical"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:orientation="horizontal" >
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:orientation="horizontal" >

                Aadhar Id<TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/address"
                    android:textColor="@android:color/black"
                    android:layout_gravity="center_vertical"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/editAddr"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:singleLine="true"
                    android:textSize="16sp" />
            </LinearLayout>
            
            
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/aadhar_id"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvAadharId"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/aadhar_id"
                    android:textColor="@android:color/black"
                    android:layout_gravity="center_vertical"
                    android:singleLine="true"
                    android:textSize="16sp" />
            </LinearLayout>
       </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTitle"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvEMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvName"
        android:layout_margin="10dp"
        android:textColor="@android:color/black"
        android:text="@string/eMail"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_below="@+id/tvEMail"
        android:layout_margin="5dp"
        android:layout_marginLeft="10dp"
        android:text="@string/contactNumber"
        android:textColor="@android:color/black"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>